# Disjorn

./: .gitignore  AGENTHOOD.md  AUTHORITY-PLAN.md  Architecture.md  BUILD-LOOP.md  BUILD-PLAN.md  BotNotes.md  DEFERRED.md  HARNESS-PLAN.md  MEMORY-DESIGN.md  README.md  RED-TEAM-BACKLOG.md
SPECS/: 2026-07-22-claudette-prompt-to-spine.md  2026-07-22-gable-spine-ro-cutover-seat-split.md  PASSDOWN-claudette-prompt-to-spine.md  README.md  TEMPLATE.md
client/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.sw.json  vite.config.ts
deploy/: .env.example  DEPLOY-CHEATSHEET.md  README-DEPLOY.md  disjorn.service  (+1 more)
harness/consolidation/: INTEGRATION-NEEDS.md  README.md  disjorn-consolidation@.service  disjorn-consolidation@.timer  pyproject.toml
harness/consolidation/config/: claudette.toml  gable.toml
harness/consolidation/consolidation/: __init__.py  __main__.py  analyze.py  config.py  embedders.py  model.py  poster.py
harness/consolidation/tests/: conftest.py  consolidation_testlib.py  fake_broker_cli.py  test_consolidation_absent_inputs.py  test_consolidation_cli.py  test_consolidation_config.py  test_consolidation_evict_compress.py  test_consolidation_nomutation.py  test_consolidation_posting.py  test_consolidation_promote.py  test_consolidation_softtarget.py  test_consolidation_supersession.py
harness/house_memory/: README.md  pyproject.toml
harness/house_memory/house_memory/: __init__.py  bootstrap.py  embeddings.py  migration.py  retrieval_log.py  schema.py  spine.py  store.py
harness/house_memory/tests/: conftest.py  house_memory_testlib.py  test_bootstrap.py  test_migration.py  test_retrieval_log.py  test_spine.py  test_store.py
sdk/: README.md  pyproject.toml
sdk/disjorn_sdk/: __init__.py  client.py  events.py
sdk/examples/: echo_bot.py
sdk/tests/: conftest.py  test_sdk_live.py
(+178 files in other folders)
