[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "disjorn-sdk"
version = "0.1.0"
description = "Python bot SDK for Disjorn (WS event stream + REST posting + seq-based backfill)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.24",
    "websockets>=12",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
include = ["disjorn_sdk*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: live-server integration tests (run by default; need server/.venv)",
]
